<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="SaveInMemory" Id="{775105ca-9365-4054-8101-5ff720f6736e}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION SaveInMemory : BOOL
VAR_INPUT
    sData : REFERENCE TO STRING(2000);
END_VAR
VAR
    fbJson     : FB_JsonSaxWriter;
    i          : int;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbJson.ResetDocument();

// array1
fbJson.StartObject();
fbJson.AddKey('StationTime1');
fbJson.StartArray();

FOR i := 1 TO CONST.STATION_NUMBER BY 1 DO
    fbJson.AddDint(PERS.iStationTimeDef1[i]);
END_FOR

fbJson.EndArray();
fbJson.EndObject();

// array2
fbJson.StartObject();
fbJson.AddKey('StationTime2');
fbJson.StartArray();

FOR i := 1 TO CONST.STATION_NUMBER BY 1 DO
    fbJson.AddDint(PERS.iStationTimeDef2[i]);
END_FOR

fbJson.EndArray();
fbJson.EndObject();

// end of file
sData := fbJson.GetDocument();

fbJson.ResetDocument();
]]></ST>
    </Implementation>
    <LineIds Name="SaveInMemory">
      <LineId Id="1410" Count="0" />
      <LineId Id="1460" Count="0" />
      <LineId Id="1459" Count="0" />
      <LineId Id="1411" Count="5" />
      <LineId Id="1433" Count="0" />
      <LineId Id="1418" Count="1" />
      <LineId Id="1439" Count="0" />
      <LineId Id="1462" Count="0" />
      <LineId Id="1457" Count="0" />
      <LineId Id="1440" Count="1" />
      <LineId Id="1453" Count="3" />
      <LineId Id="1450" Count="2" />
      <LineId Id="1420" Count="0" />
      <LineId Id="1464" Count="0" />
      <LineId Id="1463" Count="0" />
      <LineId Id="1421" Count="2" />
      <LineId Id="135" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>